Bug 97904 - gtk3 / odd behavior of Opengl options in Tools->Options->Libreoffice->View
Summary: gtk3 / odd behavior of Opengl options in Tools->Options->Libreoffice->View
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.1.0.1 rc
Hardware: All Linux (All)
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0 target:5.1.2
Keywords:
Depends on:
Blocks: GTK3 OpenGL-Linux
  Show dependency treegraph
 
Reported: 2016-02-16 15:09 UTC by Callegar
Modified: 2016-11-01 19:29 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Loo 5.2.0.1 still allow GL checkboxes (195.85 KB, image/png)
2016-07-17 14:38 UTC, Friedmann Bruno
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Callegar 2016-02-16 15:09:25 UTC
In 5.1, you get two options

- Use OpenGL for all rendering
- Force OpenGL even if blacklisted

and then a summary line about the OpenGL status.

The two options seem to be completely uneffective in Linux. With any possible combination the current GL status remains disabled.

1) Is that the expected behavior? I am asking with particular reference with the "Force OpenGL even if blacklisted" that is actually not enforced.

2) If this is the expected behavior in Linux, wouldn't it be better to hide the options alltogether on Linux machines?
Comment 1 Adolfo Jayme Barrientos 2016-02-17 07:43:52 UTC
@Michael: Any thoughts on this?
Comment 2 Michael Meeks 2016-02-17 14:54:28 UTC
Oh - under Linux; if you use gtk3 then the OpenGL stuff claims it is on when it is not, and doesn't work =) if you use gtk2 - then in fact it behaves as expected.

Its up to Caolan I guess; I'd support unwinding this for the gtk3 backend either by hiding options (in that mode) or re-using the OpenGL rendering [ which would be nicer for the future of course ].

Thanks for reporting.
Comment 3 Commit Notification 2016-02-18 11:28:29 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d967cc35fd0c77d9f3dd0b3d0c7df850db6ec274

Resolves: tdf#97904 opengl stuff isn't implemented for gtk3

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2016-02-19 14:58:11 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ea32554ad0be02d3946eb19c96b2c29081ef66d9&h=libreoffice-5-1

Resolves: tdf#97904 opengl stuff isn't implemented for gtk3

It will be available in 5.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Adolfo Jayme Barrientos 2016-04-17 00:36:25 UTC
> +    if (Application::GetToolkitName() == "gtk3")
> +    {
> +        m_pUseOpenGL->Hide();
> +        m_pForceOpenGL->Hide();
> +        m_pOpenGLStatusEnabled->Hide();
> +        m_pOpenGLStatusDisabled->Hide();
> +    }

From a UX standpoint, it’s much better to disable the controls rather than hide them completely.
Comment 6 Friedmann Bruno 2016-07-17 14:38:20 UTC
Created attachment 126249 [details]
Loo 5.2.0.1 still allow GL checkboxes

Version: 5.2.0.1
Build ID: 20m0(Build:1)
CPU Threads: 8; OS Version: Linux 4.6; UI Render: default; 
Locale: fr-CH (fr_CH.UTF-8)
Comment 7 Friedmann Bruno 2016-07-17 14:41:36 UTC
Sorry to bother you,

I discovered that in Loo 5.0.2.1 available on openSUSE Tumbleweed, we still see and are able to interact with the checkboxes.

the GL status is always marked as disabled even if I have a fully working openGL rendering as stated by glxinfo.

I'm running Loo from KDE plasma5 with the breeze integration, could it be causing by passing the «if» statement ?
Comment 8 Caolán McNamara 2016-07-17 16:12:12 UTC
I cannot stress enough how useless it is to reopen bugs months after a "resolution".
Comment 9 Callegar 2016-11-01 19:29:17 UTC
Yet, the issue is present in the 5.2.3.3 linux build.

I still see:

- a tickable (non disabled) option to use opengl for all rendering
- another tickable (non disabled) option to force opengl even if blacklisted

followed by a notice that opengl is disabled even when the two things above are ticked.

This is totally cosmetic, and has zero effect on the actual usability of LibO, so I feel silly in reporting it again. At the same time I witness that it misleads users into thinking that there may be something wrong in their hardware/video drivers or libreoffice itself.

Should another bug be opened rather than reopening this one?