Resolves: tdf#97904 opengl stuff isn't implemented for gtk3

Change-Id: I1abbceebadf320f28955f54058b2d0ebfc79b9bc