vcl/unx/gtk/gtkinst.cxx
@@ -186,6 +186,14 @@ void GtkInstance::EnsureInit()
 
     InitAtkBridge();
 
+    ImplSVData* pSVData = ImplGetSVData();
+    delete pSVData->maAppData.mpToolkitName;
+#if GTK_CHECK_VERSION(3,0,0)
+    pSVData->maAppData.mpToolkitName = new OUString("gtk3");
+#else
+    pSVData->maAppData.mpToolkitName = new OUString("gtk2");
+#endif
+
     bNeedsInit = false;
 }
 
